# cli

./: .getdev.toml  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  dist-workspace.toml
.claude-plugin/: marketplace.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  false_positive.md  rule_proposal.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
.playwright-mcp/: page-2026-07-22T10-31-24-943Z.yml
crates/getdev-cli/: Cargo.toml  build.rs
crates/getdev-cli/src/: main.rs  progress.rs  update.rs
crates/getdev-cli/src/commands/: audit.rs  back.rs  check.rs  doctor.rs  env.rs  init.rs  mod.rs  real.rs  review.rs  ship.rs  snap.rs  spike.rs  update.rs
crates/getdev-cli/src/update/: checksum.rs  mod.rs  signature.rs  swap.rs
crates/getdev-cli/tests/: audit_cli.rs  check_baseline_cli.rs  check_cli.rs  check_golden.rs  cli_global_flags.rs  corpus.rs  doctor.rs  env_cli.rs  init_cli.rs  network_egress.rs  pep503_agreement.rs  precision_oracle.rs  real_cli.rs  review_cli.rs  review_corpus.rs  ship_cli.rs  update_cli.rs
crates/getdev-cli/tests/snapshots/: check_golden__check_banner.snap  corpus__express_hello_report_shape_matches_snapshot.snap
crates/getdev-core/: Cargo.toml
crates/getdev-core/benches/: audit.rs  check.rs  review.rs
crates/getdev-core/rules/: models.json
crates/getdev-core/rules/audit/: cookie-insecure.yaml  cors-wildcard.yaml  debug-mode-enabled.yaml  exec-user-input.yaml  firebase-open-rules.yaml  hardcoded-secret.yaml  shell-interpolation.yaml  sql-string-concat.yaml
crates/getdev-core/rules/env/: secrets.yaml
crates/getdev-core/rules/real/: node-builtins.json
crates/getdev-core/rules/review/: debug-leftover.yaml
crates/getdev-core/src/: audit.rs  baseline.rs  config.rs  env.rs  findings.rs  fingerprint.rs  lib.rs  models.rs  mutate.rs  real.rs  report.rs  scan.rs  secrets.rs  ship.rs  suppress.rs
crates/getdev-core/src/apisurface/: dts.rs  mod.rs  pysurface.rs
crates/getdev-core/src/frameworks/: mod.rs
crates/getdev-core/src/review/: commented_code.rs  deadcode.rs  fingerprint.rs  mod.rs  orphan.rs
crates/getdev-core/src/rules/: mod.rs  query_cache.rs  schema.rs  text_regex.rs
crates/getdev-core/tests/: apisurface_fixtures.rs  audit_fixtures.rs  audit_perf.rs  check_perf.rs  check_scancontext.rs  deps_fixtures.rs  env_apply.rs  env_fixtures.rs  models_fixtures.rs  real_findings.rs  review_fixtures.rs  review_perf.rs  review_spine.rs  ship_fixtures.rs
crates/getdev-gitx/: Cargo.toml
crates/getdev-gitx/benches/: snap.rs
crates/getdev-gitx/src/: diff.rs  lib.rs  snap.rs
crates/getdev-gitx/tests/: materialize_lifecycle.rs  snap_lifecycle.rs  snap_perf.rs  snap_restore_proptest.proptest-regressions  snap_restore_proptest.rs
crates/getdev-grammars/: Cargo.toml
crates/getdev-grammars/src/: lib.rs
crates/getdev-mcp/: Cargo.toml  README.md
crates/getdev-mcp/src/: main.rs
crates/getdev-registry/: Cargo.toml
crates/getdev-registry/data/: npm-top-10k.json
crates/getdev-registry/src/: cache.rs  client.rs  lib.rs  typosquat.rs
crates/getdev-registry/tests/: cache.rs  client_hermetic.rs  offline_hermetic.rs  typosquat.rs
docs/: ARCHITECTURE.md  BUILDING.md  CI.md  DECISIONS.md  DISTRIBUTION.md  PLAN.md  README.md  RELEASING.md  ROADMAP.md  SPEC-COMMANDS.md  SPEC-CONFIG.md  SPEC-FINDINGS.md  SPEC-RULES.md  TESTING.md  THREAT-MODEL.md
integrations/: README.md
integrations/claude-code/getdev/: SKILL.md
integrations/claude-code/getdev/.claude-plugin/: plugin.json
integrations/mcp/: Cargo.toml  README.md
integrations/mcp/src/: main.rs
packaging/reserve/: README.md
packaging/reserve/crate-getdev/: Cargo.toml  README.md
packaging/reserve/crate-getdev/src/: main.rs
packaging/reserve/npm-getdev/: README.md  index.js  package.json
packaging/reserve/pypi-getdev/: README.md  pyproject.toml
packaging/reserve/pypi-getdev/src/getdev/: __init__.py
packaging/scoop/: getdev.json
rules/: models.json
rules/audit/: api-key-in-client-bundle.yaml  client-only-validation.yaml  cookie-insecure.yaml  cors-wildcard.yaml  debug-mode-enabled.yaml  eval-user-input.yaml  exec-user-input.yaml  hardcoded-secret.yaml  missing-auth-middleware.yaml  schema.json  shell-interpolation.yaml  sql-string-concat.yaml  supabase-permissive-rls.yaml
rules/env/: secrets.yaml
rules/real/: py-import-aliases.json  pypi-top-15k.json  python-stdlib.json
rules/review/: todo-introduced.yaml
scripts/: launch-verify.sh
site/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
site/app/: globals.css  layout.tsx  page.tsx
site/public/: _redirects  llms.txt
testdata/corpus/: README.md
testdata/corpus/precision/: README.md
testdata/corpus/precision/aliased-ts/: getdev-precision.json
testdata/corpus/precision/clean-node-app/: package.json  server.js
testdata/corpus/precision/duplicate-scaffolding/: getdev-precision.json  smoke.spec.ts
testdata/corpus/precision/installed-surface/: getdev-cache-seed.json  getdev-precision.json  package.json
testdata/corpus/precision/installed-surface-realworld/: getdev-cache-seed.json  package.json
testdata/corpus/precision/secret-negatives/: getdev-precision.json  settings.py
testdata/corpus/precision/sql-and-orm/: getdev-cache-seed.json  getdev-precision.json
testdata/corpus/seeded/django-rest-tutorial/: getdev-cache-seed.json  getdev-expected.json  requirements.txt
testdata/corpus/seeded/django-skeleton/: getdev-cache-seed.json  getdev-expected.json  requirements.txt
testdata/corpus/seeded/express-api/: getdev-cache-seed.json  getdev-expected.json  package.json
testdata/corpus/seeded/express-hello/: getdev-cache-seed.json  getdev-expected.json  package.json
testdata/corpus/seeded/express-nested/: getdev-cache-seed.json  (+1 more)
testdata/fixtures/review/: README.md
testdata/spike/: app.js  component.tsx  main.py  util.ts
testdata/update/signature/: README.md  SHA256SUMS  SHA256SUMS.sig  cosign.pub
(+328 files in other folders)
