[workspace]
resolver = "2"
members = [
    "crates/getdev-cli",
    "crates/getdev-core",
    "crates/getdev-registry",
    "crates/getdev-gitx",
    "crates/getdev-grammars",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/getdev-ai/cli"
homepage = "https://getdev.ai"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
humantime = "2"
ignore = "0.4"
owo-colors = "4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
streaming-iterator = "0.1"
toml = "0.8"
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

getdev-core = { path = "crates/getdev-core" }
getdev-grammars = { path = "crates/getdev-grammars" }
getdev-registry = { path = "crates/getdev-registry" }
getdev-gitx = { path = "crates/getdev-gitx" }

# unsafe is forbidden via these shared lints; getdev-grammars is the sole
# exception and simply does not opt into `[lints] workspace = true`
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = true
strip = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
