[workspace]
resolver = "2"
members = [
    "crates/getdev-cli",
    "crates/getdev-core",
    "crates/getdev-registry",
    "crates/getdev-gitx",
    "crates/getdev-grammars",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/getdev-ai/cli"
homepage = "https://getdev.ai"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
humantime = "2"
ignore = "0.4"
owo-colors = "4"
proptest = "1"
rayon = "1.12"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "json"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
serde_yaml = "0.9"
streaming-iterator = "0.1"
strsim = "0.11"
toml = "0.8"
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

# `version` is required alongside `path` for crates.io publishing: cargo strips
# the `path` and keeps the version requirement in the published manifest.
getdev-core = { path = "crates/getdev-core", version = "0.1.0" }
getdev-grammars = { path = "crates/getdev-grammars", version = "0.1.0" }
getdev-registry = { path = "crates/getdev-registry", version = "0.1.0" }
getdev-gitx = { path = "crates/getdev-gitx", version = "0.1.0" }

# unsafe is forbidden via these shared lints; getdev-grammars is the sole
# exception and simply does not opt into `[lints] workspace = true`
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = true
strip = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
