[package]
# crates.io package name is `getdev` (so `cargo install getdev` works);
# the directory is crates/getdev-cli per workspace layout
name = "getdev"
description = "verify, secure, and ship AI-generated code — one binary, runs locally, nothing leaves your machine"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

# publish = false keeps pre-release code off crates.io, but the binary must
# still be distributable by cargo-dist
[package.metadata.dist]
dist = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
# Interactive prompts for `getdev init`'s offer-steps (Confirm only). Default
# features (editor/password/zeroize/tempfile) are unused here, so trim them —
# `Confirm` lives in the base crate. Legitimacy verdict OK (07-RESEARCH).
dialoguer = { version = "0.12.0", default-features = false }
getdev-core = { workspace = true }
getdev-gitx = { workspace = true }
getdev-grammars = { workspace = true }
getdev-registry = { workspace = true }
owo-colors = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2.2.2"
insta = { version = "1.48.0", features = ["json"] }
serde_json = { workspace = true }
