[package]
# crates.io package name is `getdev` (so `cargo install getdev` works);
# the directory is crates/getdev-cli per workspace layout
name = "getdev"
description = "verify, secure, and ship AI-generated code — one binary, runs locally, nothing leaves your machine"
publish = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

# the binary is distributed by cargo-dist as well as via `cargo install getdev`
[package.metadata.dist]
dist = true

[dependencies]
anyhow = { workspace = true }
# Self-update signature verification (getdev-cli::update::signature only) —
# keyed cosign vector decoded/verified with pure-Rust RustCrypto, NO async
# sigstore/tokio (DEC-01 preserved literally; locked decision D-01). base64
# decodes the `.sig`, p256 verifies the detached ECDSA-P256 signature.
base64 = "0.22.1"
clap = { workspace = true }
# Interactive prompts for `getdev init`'s offer-steps (Confirm only). Default
# features (editor/password/zeroize/tempfile) are unused here, so trim them —
# `Confirm` lives in the base crate. Legitimacy verdict OK (07-RESEARCH).
getdev-core = { workspace = true }
getdev-gitx = { workspace = true }
getdev-grammars = { workspace = true }
getdev-registry = { workspace = true }
hex = "0.4.3"
owo-colors = { workspace = true }
# `ecdsa` + `signature` (the types named in D-01) arrive transitively via the
# `ecdsa` feature; `pem` gives us `from_public_key_pem` for the SPKI-PEM key.
p256 = { version = "0.14.0", features = ["ecdsa", "pem"] }
rayon = { workspace = true }
reqwest = { workspace = true }
self-replace = "1.5"
semver = "1"
serde = { workspace = true }
serde_json = { workspace = true }
# SHA-256 prehash of the manifest that cosign signs (workspace pin, 0.10).
sha2 = { workspace = true }
# Typed `UpdateError` the 08-04 self-update engine matches on (any `Err` =>
# abort before swap). thiserror for the typed variants; anyhow stays at the
# `main.rs`/command boundary.
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2.2.2"
insta = { version = "1.48.0", features = ["json"] }
serde_json = { workspace = true }
# The Windows `.zip` extractor lives behind `cfg(windows)` for the shipped
# binary, but its extraction logic is exercised hermetically on the dev host
# (unix/macOS) too — so `zip` is also a dev-dependency here, keeping the test
# runnable on every platform. Same minimal pure-Rust deflate config as below.
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[target."cfg(unix)".dependencies]
lzma-rs = "0.3"
tar = "0.4"

# Windows ships a `.zip` release archive (Unix ships `.tar.xz`). Pure-Rust
# deflate only (flate2 with the rust_backend/miniz_oxide inflater; zopfli is a
# pure-Rust compress-only sidecar) — NO C toolchain, NO bzip2/zstd/aes/lzma — to
# preserve determinism and keep `cargo deny` green (mirrors the cfg(unix)
# lzma-rs/tar confinement 08-04 established). This tree is Windows-only, so the
# Unix binary never carries it.
[target."cfg(windows)".dependencies]
zip = { version = "2.4", default-features = false, features = ["deflate"] }
