[package]
name = "getdev-core"
description = "getdev engine: scan, findings, rules, mutate, report — no network code here"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
getdev-grammars = { workspace = true }
humantime = { workspace = true }
ignore = { workspace = true }
owo-colors = { workspace = true }
pyproject-toml = "0.13"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
streaming-iterator = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
yarn-lock-parser = "0.14"
