[package]
name = "getdev-core"
description = "getdev engine: scan, findings, rules, mutate, report — no network code here"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
getdev-grammars = { workspace = true }
globset = "0.4"
humantime = { workspace = true }
ignore = { workspace = true }
include_dir = "0.7"
jsonschema = "0.47"
owo-colors = { workspace = true }
pyproject-toml = "0.13"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
streaming-iterator = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
yarn-lock-parser = "0.14"

[dev-dependencies]
# Dev-only benchmark harness (04-07): pre-approved project decision, never
# shipped in the binary — see CLAUDE.md line 17 / docs/TESTING.md line 19
# (`cargo bench -p getdev-core`), exempt from the 04-01-style third-party
# legitimacy checkpoint (04-07-PLAN.md Task 2 rationale).
criterion = "0.5"

[[bench]]
name = "audit"
harness = false

[[bench]]
name = "review"
harness = false
