[package]
name = "getdev-gitx"
description = "git plumbing for getdev snap/back and diff extraction, via std::process::Command"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
# Dev-only benchmark harness: the `snap` perf budget (docs/PLAN.md §3.5,
# `snap < 1s`) needs a criterion bench that measures `snapshot` where the
# operation lives (a getdev-core bench cannot call it without a forbidden
# getdev-core → getdev-gitx edge). Never shipped in the binary; mirrors the
# getdev-core bench precedent (04-07). See benches/snap.rs.
criterion = "0.5"
proptest = { workspace = true }
sha2 = { workspace = true }

[[bench]]
name = "snap"
harness = false
