# getdev-mcp — a Model Context Protocol server exposing getdev to AI agents.
#
# Standalone (its own `[workspace]` below) so it is fully decoupled from the
# getdev cargo workspace and its cargo-dist release pipeline — this is an
# integration/preview crate, ahead of the v0.3–v0.4 `getdev-mcp` roadmap slot.
#
# It respects getdev's settled invariants: NO async runtime (a blocking stdio
# JSON-RPC loop, no tokio), and it makes NO network calls of its own — every
# tool shells out to the installed `getdev` binary, which owns the (already
# egress-confined) network behavior. `serde`/`serde_json` only; nothing banned.
[package]
name = "getdev-mcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Model Context Protocol (MCP) server exposing getdev as tools for AI agents"
repository = "https://github.com/getdev-ai/cli"
publish = false

[[bin]]
name = "getdev-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Detach from the parent getdev workspace — this crate builds independently.
[workspace]
