[package]
name = "getdev"
version = "0.0.0"
edition = "2021"
description = "getdev — verify, secure, and ship AI-generated code. Placeholder reserving the crate name; the CLI lands with v0.1."
license = "Apache-2.0"
homepage = "https://getdev.ai"
repository = "https://github.com/pzelenin/getdev-cli"
readme = "README.md"
keywords = ["cli", "security", "audit", "secrets", "ai"]
categories = ["command-line-utilities", "development-tools"]
