[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getdev"
version = "0.0.2"
description = "getdev is a Rust CLI, not a Python package — it verifies, secures, and ships AI-generated code. This package permanently and defensively reserves the name; install the real tool via npm i -g getdev, brew install getdev-ai/tap/getdev, or https://getdev.ai/cli"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Pavel Zelenin" }]
keywords = ["cli", "security", "ai", "audit", "secrets"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Environment :: Console",
]

[project.urls]
Homepage = "https://getdev.ai"
Source = "https://github.com/getdev-ai/cli"

[project.scripts]
getdev = "getdev:main"

[tool.hatch.build.targets.wheel]
packages = ["src/getdev"]
